refactor(config): Reconstruct the rendering configuration structure and optimize the resource package cache
- Removed redundant configuration items such as box optimization, performance settings, particle optimization and advanced settings
- Added collision box size limit option in entity culling configuration
- Simplified the namespace caching logic of FilePackResourcesMixin
- Fixed access path error in TritiumAutoConfig
- Updated Chinese and English localization files to match the new configuration structure